# python-fastapi-WeatherAPI

./: LICENSE  README.md  main.py  pyproject.toml
app/api/: weather_stat.py  weather_status.py
app/models/: location.py  weather_stat.py  weather_status.py
app/services/: weather_talkpython.py
tests/: test_app.py  test_main.py
